--- a/styles.css
+++ b/styles.css
@@ -12,51 +12,29 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,
 section {
     display: block;
 }
-
 body {
     line-height: 1;
 }
-
-ol,
-ul {
+ol,ul {
     list-style: none;
 }
-
-blockquote,
-q {
+blockquote,q {
     quotes: none;
 }
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
+blockquote:before,blockquote:after,
+q:before,q:after {
     content: '';
     content: none;
 }
-
 table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-
-/*End Reset*/
-
-
-
+/*End CSS Reset*/
 
 /* Small Display */
 html {
